Revision history for Date-Utils

{{$NEXT}}

0.6.3  2025-11-14T10:46:03-06:00
    - Added new routine 'dow-name'
    - Added a standard load test
    - Updated README
    - Added 'source-url' to 'dist.ini' file

0.6.2  2025-04-03T17:32:55-05:00
    - Update .github/workflows/*.yml files

0.6.1  2024-01-18T09:58:44-06:00
    - Improve the DESCRIPTION to include more details
      on the ISO standard on the order of days of the week
    - Clean up code comments
    - Tweak doc comments

0.6.0  2024-01-17T15:21:02-06:00
    - Add tests for the two new routines
    - Add two more routines:
      + day-index-in-week
      + days-of-week
    - Credit Anton Antonov for README editing assistance
    - Replace hash with a new subroutine: days-in-week1
    - Define: subset DoW of Int where { 0 < $_ < 8 }
      + export it
      + apply to all args not specically using a Date type
    - Add tests for invalid DoW inputs
    - Remove redundant t/1-basic.t
    - Add planned number of tests to each test file
      + Removed 'done-testing' statements
    - More doc changes

0.5.5  2024-01-14T07:38:31-06:00
    - README corrections and improvements

0.5.4  2024-01-14T06:16:35-06:00
    - More README tweaks and error fixes
      + ensure abbreviation 'dow' is defined

0.5.3  2024-01-14T05:59:25-06:00
    - Correct Windows workflow test

0.5.2  2024-01-14T05:51:59-06:00
    - Correct errors in the README
      + note correct number of
        calendar weeks in the second
        example is six (not five)
    - Update copyright year

0.5.1  2024-01-13T18:57:55-06:00
    - Correct error in the README

0.5.0  2024-01-13T18:26:45-06:00
    - Make routine 'weeks-in-month' more general
      so a calendar week can start on any of a
      week's seven days
    - Improve documentation
    - Add tests for the new routine's capability

0.0.3  2023-03-22T20:03:59-05:00
    - Add another routine

0.0.2  2023-03-13T06:31:41-05:00
    - Add tags
    - Add two routines