@@ -2,13 +2,13 @@
 
 =head1 NAME
 
-B<Date::Utils> - Provides helpful date routines for calendar creation
+B<Date::Utils> - Provides helpful date routines for calendar creation and other uses
 
 =head1 SYNOPSIS
 
 =begin code :lang<raku>
 use Date::Utils;
-...# use the routines to create a calendar
+...# use the routines to create a calendar or give more date details
 =end code
 
 =head1 DESCRIPTION
@@ -17,10 +17,12 @@ B<Date::Utils> is a collection of routines to help users calculate
 certain dates in relation to other dates provided by Raku's powerful
 C<Date> class.
 
-The ISO standard calendar week begins on Monday as day-of-the-week
-(DoW) one and ends on Sunday, DoW seven, but the default in the
+As defined in ISO 8601, the standard calendar week begins 
+on Monday as represented by the integer one for the C<Date> 
+method C<day-of-the-week> (dow)
+and ends on Sunday represented by the integer seven. But the default in the
 subroutines herein is set for the US practice of beginning the
-calendar week on Sunday.  However, that default is easily changed by
+calendar week on Sunday (dow 7).  However, that default is easily changed by
 the named parameter C<:$cal-first-dow> as seen in the signatures of
 pertinent subroutines listed below.
 
@@ -29,9 +31,17 @@ pertinent subroutines listed below.
 =begin item
 C<dow-name>
 
-Given the day-of-week (DoW) for a Date, return its name in US English.
+Given a Date or the ISO-defined number of the day of the week, 
+return its name in US English.  (If another language is desired use 
+module C<Date::Names>.)
 
-(If another language is desired use module C<Date::Names>.)
+=begin code
+sub dow-name(
+    $arg,    #= a Date or a number in the range 1..7
+    :$debug,
+    --> Str
+) is export {...}
+=end code
 =end item
 
 =begin item
