@@ -1,6 +1,9 @@
 Revision history for Date-Utils
 
 {{$NEXT}}
+    - Fix doc pod error
+    - Change routine 'dow-name' to use either the numerical DoW
+      or a Date object to define the desired DoW number
 
 0.6.3  2025-11-14T10:46:03-06:00
     - Added new routine 'dow-name'
